# services/auth/go/controller/errors.go
@@ -130,6 +130,16 @@ func (response ErrorResponse) VisitChangeUserEmailResponse(w http.ResponseWriter
 	return response.visit(w)
 }
 
+func (response ErrorResponse) VisitChangeUserPhoneNumberResponse(w http.ResponseWriter) error {
+	return response.visit(w)
+}
+
+func (response ErrorResponse) VisitVerifyChangeUserPhoneNumberResponse(
+	w http.ResponseWriter,
+) error {
+	return response.visit(w)
+}
+
 func (response ErrorResponse) VisitChangeUserPasswordResponse(w http.ResponseWriter) error {
 	return response.visit(w)
 }
